add rest controllers and fixed service
